<resources>
    <string name="app_name">L CATALOG MODULE</string>
    <string name="app_title">L CATALOG</string>
    <string name="dummy_description">Dummy Description</string>
    <string name="powered_symbol_immersionslabs">&#8471; Immersion Software Labs. </string>
    <string name="powered_by">Powered by</string>
    <string name="company_name">Immersion Software Labs</string>
    <string name="tag_line">…the next big immersive experience</string>
    <string name="slide2_title">AUGMENT</string>
    <string name="slide2_desc">Augment will let you see the object chosen by you augmented into the real world.</string>
    <string name="slide2_link"><param>http://portal.immersionslabs.com/</param></string>
    <string name="slide3_title">360&#xb0; Object Rotation</string>
    <string name="slide3_desc">This feature lets you rotate the object in and around, to get a clear picture what you are exactly buying.</string>
    <string name="slide4_desc">This feature lets you capture the surrounds after the objects are augmented. Also lets you share between the close ones.</string>
    <string name="slide4_title_capture">CAPTURE</string>
    <string name="slide4_title_share">SHARE</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">START</string>
    <string name="catalog">Catalog</string>
    <string name="augment">Augment</string>
    <string name="icon_linkedin">LinkedIn</string>
    <string name="icon_facebook">Facebook</string>
    <string name="icon_instagram">Instagram</string>
    <string name="icon_twitter">Twitter</string>
    <string name="icon_youtube">YouTube</string>
    <string name="text_catalog_desc">
        Catalog is the ECommerce Service Provider, which includes functionalities like
        Favourites, Share, 360 deg View of the article and the Augment using Pattern.</string>
    <string name="text_aument_desc">
        Augment is a camera application that lets the user watch the article augmented onto the real world
        with the help of a pattern, these patterns can be downloaded from \n
        http://portal.immersionslabs.com/

    </string>
    <string name="catalog_title">My Name </string>
    <string name="catalog_description">My description.</string>
    <string name="original_price">1000</string>
    <string name="discount_percentage">20</string>
    <string name="discount_price">800</string>
    <string name="price_Tag">/-</string>
    <string name="Rs">\u20B9</string>
    <string name="percentage_symbol">%</string>
    <string name="discount_price_title">AFTER DISCOUNT PRICE:</string>
    <string name="discount_title">Discount :   </string>
    <string name="original_price_title">ORIGINAL PRICE:</string>
    <string name="discount_off"> OFF</string>
    <string name="product_favourite">Favourite</string>
    <string name="product_share">share</string>
    <string name="product_augment">Augment</string>
    <string name="product_3d_text">360&#xb0; Object Rotation</string>
    <string name="product_download">Download</string>
    <string name="product_budget_list">Budget List</string>
    <string name="note_download">NOTE : Please click the download button before you click the 360&#176; view, as it is already been disabled until you download</string>
    <string name="dummy_address">Chandra Layout, Bangalore- 560072</string>
    <string name="vendor_address_title">ADDRESS :</string>
    <string name="vendor_name">CMR</string>
    <string name="vendor_title">NAME :</string>
    <string name="providedby_vendor">PROVIDED BY :</string>
    <string name="dimension_value">in</string>
    <string name="height_value">20</string>
    <string name="dimen_height">HEIGHT :</string>
    <string name="length_value">25</string>
    <string name="dimen_length">LENGTH :</string>
    <string name="width_value">30</string>
    <string name="dimen_width">WIDTH :</string>
    <string name="product_rating_reviews"><![CDATA[50 ratings & 15 reviews]]></string>
    <string name="product_rating">4.3 *</string>
    <string name="product_desc">DESCRIPTION :</string>
    <string name="product_desc_name">Description of the product will be displayed here and also the related products</string>
    <string name="product_title">TITLE :</string>
    <string name="product_title_name">please display the text here............</string>
    <string name="about_us">About Us</string>
    <string name="text_aboutus_desc">Here you will get the comple details about LCatalog and Immersion Software labs Pvt Ltd</string>
    <string name="text_faq_desc">The most frequently asked questions about LCatalog will be found here</string>
    <string name="faq">FAQ</string>
    <string name="faq_text_1">The L – Catalog is an Augmented reality (AR) catalogue which helps the furniture manufacturers/vendors to deliver the user/customer the furniture portably in the form of a pattern printed on a paper.</string>
    <string name="faq_text_2">The goal of this product is to provide the opportunity to all the furniture vendors to deliver the customers the feel of having the furniture right in front of him/her without bringing the actual furniture home.</string>
    <string name="faq_text_3">This product will let the vendor/manufacturer to have his own android mobile application in the android app store, which will let him have more exposure to the rest of the country aswellas the world if possible and the greatest exposure to the market.</string>
    <string name="faq_text_4">L - CATALOG is now available on Android, and tons of covetable wardrobes are waiting, so download it now!</string>
    <string name="faq_text_5">Visit our website: www.immersionslabs.com</string>
    <string name="faq_text_heading_2">How do I get Started on L - CATALOG?</string>
    <string name="faq_text_6">The short checklist below will get you started:</string>
    <string name="faq_text_heading_3">How do I create my account?</string>
    <string name="faq_text_7">This product will let the vendor/manufacturer to have his own android mobile application in the android app store, which will let him have more exposure to the rest of the country aswellas the world if possible and the greatest exposure to the market. This android app will have the capability of augmenting the furniture into the real world physically.</string>
    <string name="faq_text_heading_4">How do I upload?</string>
    <string name="faq_text_8">Start uploading style inspirations or items that you will like to sell from your closet. It’s only going to take you 60 seconds from an iPhone or an Android phone! Snap a picture, add in your product details and pick a price. See how easy it is to make your first sale!</string>
    <string name="faq_text_heading_5">How do I shop?</string>
    <string name="contact_us">Contact Us :</string>
    <string name="what_is_l_catalog">What is L-CATALOG ?</string>
    <string name="Catalogue">
        The goal of this product is to provide the opportunity to all the furniture vendors
        to deliver the customers the feel of having the furniture right in front of them
        without bringing the furniture home. This could bring down the availability cost at
        the store, manufacturing cost of the larger units drastically increases the
        customer-vendor interaction in a much sophisticated way. Along with all these, think
        about the situation where the user takes the furniture home and feels the article doesn’t
        fit as he felt at the showroom and the customer thinks of returning the product,
        L-Catalogue will eradicate this problem and the huge transportation cost that
        is involved in this process."
    </string>
    <string name="product_objectives">Product Objectives ?</string>
    <string name="objectives">
        This product helps you in the advertisement portal as in when the product is sent for
        advertising, the article will be advertised/displayed over the newspaper or on a local
        magazine or on a digital media, the vendor/manufacturer has the freedom to provide the
        pattern wherever possible, which helps users/customers to try the product the moment
        they see the product on the advertisement portal.\n\n

        This android app will have the capability of augmenting the furniture into the real world as in
        when the user/customer places the pattern at the right place as per the instructions. This
        product also lets the users/customers to reach out to the vendor/manufacturer instantly
        using a feedback form for each article provided in the catalogue if he/she needs a customized
        furniture. The vendor will be able to choose this option while product development depending
        upon his/her selling forte is static designer products or customized.
    </string>
    <string name="definition_and_description">Definition and Description :</string>
    <string name="Definition">
        The L – Catalog is an Augmented reality (AR) catalogue which helps the furniture
        manufacturers/vendors to deliver the user/customer the furniture portability in the form of a
        pattern printed on a paper. Each manufacturer/vendor will be having an android application of
        his own in the Google playstore, which lets the user/ customer when installed this app on
        his/her android phone to scan the pattern provided by the manufacturer/vendor sticking it on
        the walls as per the instructions provided behind the pattern.\n\n

        For example, the instructions behind says 2ft above the surface/floor where you exactly
        want the furniture (if it is 4ft tall) to place inside your house. This process lets the
        user/customer to get the feel of the furniture in real world, without placing the furniture at the
        required place physically.
    </string>
    <string name="product_overview">Product Overview :</string>
    <string name="data">
       L – Catalogue is an android application that constitute of \n
            <br /> &#187; More than 100 3D furniture models which had multiple fabrics \n
            <br /> &#187; Each 3D furniture model is bound with a unique pattern.\n
            <br /> &#187; Each pattern will be provided with a set of instructions like at what height the pattern should be pasted on the wall from the surface.\n
            <br /> &#187; A camera screen that can recognize these patterns and augment into the real world
            <br /> &#187; This screen can recognize multiple patterns at a time i.e., it can augment all 3D models on to the real world .\n
            <br /> &#187; These 3D objects are intractable as in \n
            <br /> &#8226; Single Click displays the accurate dimensions of the object.\n
            <br /> &#8226; Double click lets the user choose the fabrics, if exist.\n
            <br /> &#8226; Long press opens the feedback message opens right below the object. \n
            <br /> &#187; The feedback screen lets the user to send a personal message to the vendor/ manufacturer if he/she needs a customization to the existing furniture object.\n
            <br /> &#187; Once submitted, the message will be tagged with the object ID as well as the User contact
        details, in case provided (One means is mandatory).\n
            <br /> &#187;  Once the user scans the articles, the user will be able to take a screenshot of the screen which
        lets the user to share the image between multiple apps which is a native feature. The
        tricky part is to take a screen shot as if the furniture exists in the real. There
        will be a Gallery Button in app  which shows the list of screenshots that were taken earlier using the L – Catalog app. \n
    </string>
</resources>