<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AboutUsActivity"
    tools:showIn="@layout/activity_about_us">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/margin_5">

                <TextView
                    android:id="@+id/about_header1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/overlock_sc"
                    android:text="@string/what_is_l_catalog"
                    android:textAllCaps="true"
                    android:textSize="@dimen/text_size_large"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textview2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/assistant_semibold"
                    android:text="@string/Catalogue"
                    android:textSize="@dimen/text_size_medium" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/margin_5">

                <TextView
                    android:id="@+id/textview3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/overlock_sc"
                    android:text="@string/product_objectives"
                    android:textAllCaps="true"
                    android:textSize="@dimen/text_size_large"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textview4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/assistant_semibold"
                    android:text="@string/objectives"
                    android:textSize="@dimen/text_size_medium" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/margin_5">

                <TextView
                    android:id="@+id/textview5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/overlock_sc"
                    android:text="@string/definition_and_description"
                    android:textAllCaps="true"
                    android:textSize="@dimen/text_size_large"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textview6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/assistant_semibold"
                    android:text="@string/Definition"
                    android:textSize="@dimen/text_size_medium" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/margin_5">

                <TextView
                    android:id="@+id/textview7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/overlock_sc"
                    android:text="@string/product_overview"
                    android:textAllCaps="true"
                    android:textSize="@dimen/text_size_large"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textview8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/assistant_semibold"
                    android:text="@string/data"
                    android:textSize="@dimen/text_size_medium" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/margin_5">

                <TextView
                    android:id="@+id/textview9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/overlock_sc"
                    android:paddingBottom="@dimen/margin_2"
                    android:text="@string/contact_us"
                    android:textAllCaps="true"
                    android:textSize="@dimen/text_size_large"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/margin_15"
                    android:weightSum="5">

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/facebook_about"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:contentDescription="@string/icon_facebook"
                        android:src="@mipmap/ic_facebook" />

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/linkedin_about"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:contentDescription="@string/icon_linkedin"
                        android:src="@mipmap/ic_linkedin" />

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/instagram_about"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:contentDescription="@string/icon_instagram"
                        android:src="@mipmap/ic_instagram" />

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/twitter_about"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:contentDescription="@string/icon_twitter"
                        android:src="@mipmap/ic_twitter" />

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/youtube_about"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:contentDescription="@string/icon_youtube"
                        android:src="@mipmap/ic_youtube" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>