<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/catalog"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:background="@drawable/round_button"
            android:text="@string/catalog"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_catalog_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_5"
            android:text="@string/text_catalog_desc"
            android:textAlignment="center"
            android:textStyle="italic" />

        <Button
            android:id="@+id/augment"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/round_button"
            android:text="@string/augment"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_augment_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_5"
            android:text="@string/text_aument_desc"
            android:textAlignment="center"
            android:textStyle="italic" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>