<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_5"
    android:background="@drawable/background_curves"
    app:cardBackgroundColor="@color/complete_transparent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:background="@color/white">

        <RelativeLayout
            android:id="@+id/h_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:gravity="top"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/h_item_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_250"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/app_name" />

            <TextView
                android:id="@+id/h_item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/h_item_image"
                android:layout_margin="@dimen/margin_10"
                android:gravity="center"
                android:text="@string/catalog_title"
                android:textColor="@color/primary_dark"
                android:textSize="@dimen/text_size_xxlarge"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/h_item_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/h_item_name"
                android:layout_margin="@dimen/margin_10"
                android:gravity="center"
                android:text="@string/catalog_description"
                android:textColor="@color/primary_dark"
                android:textSize="@dimen/text_size_large"
                android:textStyle="italic" />

            <LinearLayout
                android:id="@+id/h_item_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/h_item_description"
                android:layout_margin="@dimen/margin_10"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_5"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingEnd="@dimen/margin_10"
                    android:paddingStart="@dimen/margin_10">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/discount_price_title"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_small" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin_3"
                        android:text="@string/Rs"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/h_item_price_new"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/discount_price"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_small"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price_Tag"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_small" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_5"
                    android:background="@color/black"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingEnd="@dimen/margin_10"
                    android:paddingStart="@dimen/margin_10">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/discount_title"
                        android:textColor="@color/red"
                        android:textSize="@dimen/text_size_small"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/black"
                        android:padding="@dimen/margin_5">

                        <TextView
                            android:id="@+id/h_item_discount_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/discount_percentage"
                            android:textColor="@color/red"
                            android:textSize="@dimen/text_size_small"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/margin_0"
                            android:text="@string/percentage_symbol"
                            android:textColor="@color/red"
                            android:textSize="@dimen/text_size_small"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/margin_3"
                            android:text="@string/discount_off"
                            android:textColor="@color/red"
                            android:textSize="@dimen/text_size_small"
                            android:textStyle="bold" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_10"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingEnd="@dimen/margin_10"
                    android:paddingStart="@dimen/margin_10">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/original_price_title"
                        android:textColor="@color/red" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/Rs"
                        android:textColor="@color/red" />

                    <TextView
                        android:id="@+id/h_item_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/original_price"
                        android:textColor="@color/red"
                        android:textSize="@dimen/text_size_small" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price_Tag"
                        android:textColor="@color/red"
                        android:textSize="@dimen/text_size_small" />

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</android.support.v7.widget.CardView>
