<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/splash_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/background"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/splash_icon"
            android:layout_width="@dimen/margin_150"
            android:layout_height="@dimen/margin_150"
            android:layout_gravity="center"
            android:contentDescription="@string/dummy_description"
            android:src="@drawable/companyicon" />

        <TextView
            android:id="@+id/application_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="@dimen/text_size_max"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/immersionslabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/powered_symbol_immersionslabs"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold"
            android:visibility="invisible" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>